[gd_scene load_steps=5 format=1]

[ext_resource path="res://addons/tree-tools/Scripts/treetool.gd" type="Script" id=1]
[ext_resource path="res://addons/tree-tools/Scripts/grapheditor.gd" type="Script" id=2]
[ext_resource path="res://addons/tree-tools/Nodes/Menus/context_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/tree-tools/Nodes/Menus/menu_button_add.gd" type="Script" id=4]

[node name="Tree-tools" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "2D",
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]

rect/min_size = Vector2( 800, 600 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 600.0

[node name="editor" type="GraphEdit" parent="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="clear_button" type="Button" parent="Panel/editor"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 10.0
margin/right = 160.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Clear"
flat = false

[node name="import_button" type="Button" parent="Panel/editor"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 10.0
margin/right = 90.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Import"
flat = false

[node name="export_button" type="Button" parent="Panel/editor"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 10.0
margin/right = 20.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Export"
flat = false

[node name="PopupMenu" parent="Panel/editor" instance=ExtResource( 3 )]

visibility/visible = false

[node name="Label" type="Label" parent="Panel/editor"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 174.0
margin/top = 36.0
margin/right = 21.0
margin/bottom = 50.0
text = "Right-click to add nodes"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="add_button" type="Button" parent="Panel/editor"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 251.0
margin/top = 10.0
margin/right = 231.0
margin/bottom = 30.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "+"
flat = false
script/script = ExtResource( 4 )

[node name="clear_confirmation_popup" type="ConfirmationDialog" parent="Panel/editor"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 234.0
margin/top = 276.0
margin/right = 621.0
margin/bottom = 334.0
popup/exclusive = false
window/title = "Please Confirm..."
dialog/text = "The content of the TreeNode will be erased. Are you sure?"
dialog/hide_on_ok = true

[node name="save_dialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 257.0
margin/top = 226.0
margin/right = 899.0
margin/bottom = 676.0
popup/exclusive = false
window/title = "Save a File"
dialog/hide_on_ok = false
mode = 4
access = 2
filters = StringArray( "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation" )
show_hidden_files = false

[node name="load_dialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1377.0
margin/top = 226.0
margin/right = 2019.0
margin/bottom = 676.0
popup/exclusive = false
window/title = "Open a File"
dialog/hide_on_ok = false
mode = 0
access = 2
filters = StringArray( "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation" )
show_hidden_files = false

[connection signal="connection_request" from="Panel/editor" to="Panel/editor" method="_on_editor_connection_request"]

[connection signal="disconnection_request" from="Panel/editor" to="Panel/editor" method="_on_editor_disconnection_request"]

[connection signal="pressed" from="Panel/editor/clear_button" to="Panel/editor" method="raise_clear_confirm"]

[connection signal="pressed" from="Panel/editor/import_button" to="." method="_on_import_button_pressed"]

[connection signal="pressed" from="Panel/editor/export_button" to="." method="_on_export_button_pressed"]

[connection signal="confirmed" from="Panel/editor/clear_confirmation_popup" to="Panel/editor" method="clear"]

[connection signal="close_request" from="Panel/editor/node1" to="Panel/editor/node1" method="_on_close_request"]

[connection signal="file_selected" from="save_dialog" to="." method="_save_data"]

[connection signal="file_selected" from="load_dialog" to="." method="_load_data"]


[editable path="Panel/editor/PopupMenu"]
